# racore-browser

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.mjs  package-lock.json  package.json  racore-cli.spec  racored.spec  vite.config.ts
.cursor/rules/: racore-project.mdc
.llms/: 01-architecture.md  02-frontend.md  03-backend.md  04-desktop.md  05-api-reference.md  06-data-flow.md  07-types.md  08-build-and-test.md
.openai/: hosting.json
.opencode/skills/: racore-project.md
app/: globals.css  layout.tsx  page.tsx
app/browser/: page.tsx
app/components/: AgenticBrowserView.tsx  LiveNetworkView.tsx  Onboarding.tsx  ProvidersView.tsx
app/lib/: desktop.ts  (+1 more)
desktop/: README.md  main.cjs  preload.cjs
desktop-ui/: index.html  main.tsx  next-image.tsx  vite.config.ts
docs/: architecture.md  tauri-development.md  tauri-migration-audit.md  tauri-verification.md
god/: README.md  go.mod  go.sum
protocol/: README.md  cli.mjs  rcp.mjs
python/: pyproject.toml  racore_cli.py  requirements-dev.txt  requirements.txt
python/racored/: __init__.py  __main__.py  authority.py  config.py  ipfs.py  kubo.py  mesh.py  providers.py  server.py  vault.py
python/scripts/: mesh_smoke.py
python/tests/: test_racored.py
scripts/: prepare-tauri-sidecars.mjs  verify-tauri-bundle.mjs
specs/: rcp-0.1.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  daemon.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  windows.rs
tests/: desktop-bridge.test.mjs  protocol.test.mjs  readme-assets.test.mjs  rendered-html.test.mjs  tauri-backend-contract.test.mjs  tauri-bundle-verification.test.mjs  tauri-migration-audit.test.mjs  tauri-scaffold.test.mjs
website/: README.md  package-lock.json  package.json
(+46 files in other folders)
