[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "racored"
version = "0.2.0"
description = "Racore AI gateway, IPFS bridge, mesh daemon, and domain authority"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "httpx==0.28.1",
  "cryptography==45.0.6",
  "keyring==25.6.0",
  "python-multipart==0.0.20",
  "websockets==15.0.1",
  "pydantic==2.11.7",
]

[project.scripts]
racored = "racored.server:main"

[tool.setuptools.packages.find]
where = ["."]
