[package]
name = "racore-browser"
version = "0.1.0"
description = "Racore Browser desktop shell"
authors = ["Racore"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "racore_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = [] }
