[package]
name = "racore-browser"
version = "0.1.0"
description = "Racore Browser desktop shell"
authors = ["Racore"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "racore_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.53.1", features = ["sync", "time"] }
url = "2.5.8"
